layout and final touches for sentinel search

--- a/S1_ice_water_classification/sea_ice_types_classification.ipynb
+++ b/S1_ice_water_classification/sea_ice_types_classification.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "ca95e565-7c85-47d1-96f5-c053accf76d7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### This notebook implements label propagation for the classification of sea ice types from a Sentinel-1 EW GRDM image crop\n",
     "---\n",
@@ -73,7 +75,7 @@
    "metadata": {},
    "source": [
     "### Define the class label dictionary\n",
-    "#### The class label dictionary contains digits as keys, and the corresponding ice type labels as values (e.g. 1 : 'level ice'). This mapping is needed to visualise the label mask and the final classification result."
+    "The class label dictionary contains digits as keys, and the corresponding ice type labels as values (e.g. 1 : 'level ice'). This mapping is needed to visualise the label mask and the final classification result."
    ]
   },
   {
@@ -225,8 +227,9 @@
    "metadata": {},
    "source": [
     "### Prepare input bands and label mask for label propagation\n",
-    "#### Preparing the data for label propagation happens in 3 steps, described one by one here.\n",
-    "#### **_Step 1: update label mask_**  <br> The label propagation algorithm in scikit-learn requires all unlabeled samples to have value -1. In our original label mask, the unlabeled samples had value 0, so we replace all 0 values by -1."
+    "Preparing the data for label propagation happens in 3 steps, described one by one here.\n",
+    "\n",
+    "**_Step 1: update label mask_**  <br> The label propagation algorithm in scikit-learn requires all unlabeled samples to have value -1. In our original label mask, the unlabeled samples had value 0, so we replace all 0 values by -1."
    ]
   },
   {
@@ -246,7 +249,7 @@
    "id": "c0488e74-e72b-4f36-bc73-ef7a611f62ce",
    "metadata": {},
    "source": [
-    "#### **_Step 2: normalize data_**  <br> The input bands (HH and HV bands in this case) need to be normalized. Normalizing data can be done in different ways, this script implements and visualizes 4 different options."
+    "**_Step 2: normalize data_**  <br> The input bands (HH and HV bands in this case) need to be normalized. Normalizing data can be done in different ways, this script implements and visualizes 4 different options."
    ]
   },
   {
@@ -355,7 +358,7 @@
    "id": "09c38726-f186-463d-9e92-70c018c057b0",
    "metadata": {},
    "source": [
-    "#### **_Step 3: stack and flatten input bands and label mask_**  <br> The different input bands (HH and HV) are stacked pixelwise into a 3D array 'X'. The label propagation algorithm from scikit-learn expects as input a data array of shape (N,1) and a label mask of shape (N,1), where N is the total amount of samples in an input band. We therefore flatten the 3D array 'X' into a 1D array. We also flatten the label mask ('y')."
+    "**_Step 3: stack and flatten input bands and label mask_**  <br> The different input bands (HH and HV) are stacked pixelwise into a 3D array 'X'. The label propagation algorithm from scikit-learn expects as input a data array of shape (N,1) and a label mask of shape (N,1), where N is the total amount of samples in an input band. We therefore flatten the 3D array 'X' into a 1D array. We also flatten the label mask ('y')."
    ]
   },
   {
