--- a/S1_ice_water_classification/sentinel_search_Barents_Sea.ipynb
+++ b/S1_ice_water_classification/sentinel_search_Barents_Sea.ipynb
@@ -5,22 +5,34 @@
    "id": "49679b71-9db6-4cfc-8455-e2cb9972d316",
    "metadata": {},
    "source": [
-    "## Search for overlapping Sentinel-1 and Sentinel-2 in Barents Sea"
+    "## Search for overlapping Sentinel-1 and Sentinel-2 in the Barents Sea"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "876d388f-32cc-4f03-aeb9-fadf2e242ebb",
+   "id": "3a6bf914-2cb9-4ccf-84ee-ebf82f7a31e1",
    "metadata": {},
    "source": [
-    "### This notebook searches for overlapping Sentinel-1 (EW GRDM) and Sentinel-2 (L1C, cloud coverage 0-30%) data.\n",
-    "#### The search is implemented using the 'sentinelSAT' package, which is a powerful search API for the Copernicus Scihub database.\n",
+    "### This notebook searches for overlapping Sentinel-1 (EW GRDM) and Sentinel-2 (L1C) data. The search is implemented using the 'sentinelSAT' package, which is a powerful search API for the Copernicus Scihub database.\n",
     "\n",
-    "#### Two requirement to run this script:\n",
-    "#### 1) have a user account on Copernicus Open Access Hub (Scihub): https://scihub.copernicus.eu/dhus/#/home\n",
-    "#### 2) create a file named .env in the directory 'S1_sea_ice_classification'. In this file, save your username and password for Copernicus SciHub like this:\n",
-    "#### DHUS_USER=\"scihub_username\"\n",
-    "#### DHUS_PASSWORD=\"scihub_password\"\n"
+    "#### **Requirements to run this script:**\n",
+    "1) have a user account on Copernicus Open Access Hub (Scihub): https://scihub.copernicus.eu/dhus/#/home\n",
+    "2) create a file named '.env' in the directory _'S1_ice_water_classification'_. In this file, save your username and password for Copernicus SciHub in exactly this format:\n",
+    "\n",
+    "> DHUS_USER=\"scihub_username\" <br>\n",
+    "> DHUS_PASSWORD=\"scihub_password\"\n",
+    "\n",
+    "_**NOTE**: it is strongly recommended to add the .env file to the .gitignore, to avoid pushing your credentials to a public repository!_\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47b40963-f924-4b4b-a5a5-9bc8fa0837bb",
+   "metadata": {},
+   "source": [
+    "#### Import some packages needed to run this code"
    ]
   },
   {
@@ -41,10 +53,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8bb50c2-8f8f-47d0-954c-d35c6a9e01eb",
+   "id": "af160638-af91-4dd6-9e04-0529578d57c9",
    "metadata": {},
    "source": [
-    "#### Load environment variables containing username and password for Copernicus Scihub"
+    "#### Load environment variables from .env file, containing username and password for Copernicus Scihub"
    ]
   },
   {
@@ -70,6 +82,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79036508-eafd-40d0-baf4-cc863e0b9c05",
+   "metadata": {},
+   "source": [
+    "#### Establish the connection to Copernicus Scihub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3be7a9f4-246c-4308-94cf-9d314b188757",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# establish connection to Copernicus Scihub\n",
+    "api = SentinelAPI(os.environ[\"DHUS_USER\"], os.environ[\"DHUS_PASSWORD\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a415ba6c-d05d-4176-8bcd-1516c0974c89",
+   "metadata": {},
+   "source": [
+    "#### Determine search criteria for Sentinel-1 imagery and perform search\n",
+    "In a first step, we search for Sentinel-1 EW GRDM products that contain our region of interest (ROI). \n",
+    "The ROI for the Barents Sea can be found in the _'rois'_ folder. We narrow the search down by the following criteria:\n",
+    "1) area: the search polygon (ROI), saved as GEOjson file\n",
+    "2) time: start- and endtime\n",
+    "3) platform: Sentinel-1\n",
+    "4) product type: GRD\n",
+    "5) area relation: 'contain'. This means that only products where the search area is entirely WITHIN the footprint of the S1 will be returned.\n",
+    "\n",
+    "To create your own custom ROI, nagivate to : https://geojson.io/ and draw a polygon of your choice. Then, save the result in GEOjson file format. Upload it to the notebook and give the path to the new file in the variable 'area' (see below).\n",
+    "\n",
+    "The query returns a dictionary _'s1_products'_, which contains all results that match our search criteria."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "9338397b-7c04-4064-bc7a-96b1bc33d1ed",
@@ -84,10 +134,6 @@
     }
    ],
    "source": [
-    "# establish connection to Copernicus Scihub\n",
-    "api = SentinelAPI(os.environ[\"DHUS_USER\"], os.environ[\"DHUS_PASSWORD\"])\n",
-    "\n",
-    "# search over Fram Strait for S1 imagery (from 1st Dec 2020 to 1st June 2021)\n",
     "# use custom geojson files containing search polygon\n",
     "area = './rois/Barents_Sea.geojson'\n",
     "polygon_path = Path(area).expanduser().absolute()\n",
@@ -109,8 +155,47 @@
     "                platformname=\"Sentinel-1\",\n",
     "                producttype=\"GRD\",\n",
     "                area_relation=s1_area_relation,\n",
-    "                )\n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0887f6a1-36d8-44e3-b4b6-a1b151790a5b",
+   "metadata": {},
+   "source": [
+    "#### Search for overlapping optical data from Sentinel-2 (L1C)\n",
+    "In this step, we look for Sentinel-2 L1C products that overlap with the S1 scenes of the first search. We enter the following search criteria:\n",
+    "1) area: the same ROI as for the S1 search, because we are searching for spatial overlap!\n",
+    "2) time: images taken _x_ hours before or after the S1 image acquisition (set in 'max_n_hours' variable)\n",
+    "3) platform: Sentinel-2\n",
+    "4) processing level: Level-1C\n",
+    "5) area relation: 'intersect'. This will return all hits where the ROI intersects with the S2 footprint. We choose intersect here, because S2 images have a much smaller footprint than S1.\n",
+    "6) cloud cover: cloud cover range in percentage, given as tuple\n",
     "\n",
+    "This output a dictionary _'s1_s2_overlap'_, which contains all S1 product names of the first search that have overlapping S2 images. The dictionary has as keys S1 product names, and as values the corresponding overlapping S2 product name(s).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "108b61fb-110c-4538-a069-6bb7a216e05e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DEFINE SEARCH PARAMETERS FOR S2\n",
+    "\n",
+    "# define maximum time difference between S1 and S2 image acquisitions\n",
+    "max_n_hours = 8\n",
+    "timedelta = datetime.timedelta(hours = max_n_hours) \n",
+    "\n",
+    "# define cloud cover percentage range\n",
+    "cloudcover = (0, 30)\n",
+    "\n",
+    "# area relation for S2, 'intersects' returns all hits where the ROI polygon INTERSECTS with the S1 footprint\n",
+    "s2_area_relation = 'Intersects'\n",
+    "\n",
+    "# -------------------------------------------------------------------------------------------------------------------\n",
+    "# PERFORM SEARCH\n",
     "# create empty dictionary that will contain S1 identifiers as keys, and the overlapping S2 identifier(s) as values\n",
     "s1_s2_overlap = {}\n",
     "\n",
@@ -121,8 +206,7 @@
     "    s1_identifier = s1_products[product]['identifier']\n",
     "    s1_timestamp = s1_products[product]['beginposition']\n",
     "\n",
-    "    # look for S2 imagery taken 2 hours before or after S1 acquisition\n",
-    "    timedelta = datetime.timedelta(hours = 8) \n",
+    "    # look for S2 imagery taken x hours before or after S1 acquisition\n",
     "    s2_starttime = s1_timestamp - timedelta\n",
     "    s2_endtime = s1_timestamp + timedelta\n",
     "\n",
@@ -135,7 +219,7 @@
     "                        date = (s2_starttime, s2_endtime),\n",
     "                        platformname=\"Sentinel-2\",\n",
     "                        processinglevel=\"Level-1C\",\n",
-    "                        cloudcoverpercentage=(0, 30),\n",
+    "                        cloudcoverpercentage=cloudcover,\n",
     "                        area_relation=s2_area_relation,\n",
     "                        )\n",
     "    \n",
@@ -149,7 +233,16 @@
     "            s2_id_list.append(s2_identifier)\n",
     "        s1_s2_overlap[s1_identifier] = s2_id_list\n",
     "            \n",
-    "print('Found', len(s1_s2_overlap), 'S1 scenes with overlapping S2 imagery.')\n"
+    "print('Found', len(s1_s2_overlap), 'S1 scenes with overlapping S2 imagery.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0beb8da9-1f0a-42cb-8a78-a072f8a7b51c",
+   "metadata": {},
+   "source": [
+    "#### Save search results to text files \n",
+    "The search results from the _'s1_s2_overlap'_ dictionary are saved in text files, under the folder _'search_results_Barents_Sea'_. A seperate text file is created for each S1 product and the corresponding overlapping S2 products. The text files are named after the S1 product name, the content of the file is the overlapping S2 product names."
    ]
   },
   {
@@ -170,18 +263,8 @@
     "# save dictionary results to text files, these text files can then be used to download the S1 and S2 products on e.g. Creodias\n",
     "for key, value in s1_s2_overlap.items(): \n",
     "    with open(f\"./search_results_Barents_Sea/{key}.txt\", 'w') as f:\n",
-    "        f.write('\\n'.join(value))\n",
-    "        \n",
-    "print('Search results saved in \"search_results_Barents_Sea\" folder!')"
+    "        f.write('\\n'.join(value))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5db93bec-5f79-49c9-8b48-0db9a9030abf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
