--- a/S1_ice_water_classification/sentinel_search_Fram_Strait.ipynb
+++ b/S1_ice_water_classification/sentinel_search_Fram_Strait.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "#### **Requirements to run this script:**\n",
     "1) have a user account on Copernicus Open Access Hub (Scihub): https://scihub.copernicus.eu/dhus/#/home\n",
-    "2) create a file named '.env' in the directory 'S1_ice_water_classification'. In this file, save your username and password for Copernicus SciHub in exactly this format:\n",
+    "2) create a file named '.env' in the directory _'S1_ice_water_classification'_. In this file, save your username and password for Copernicus SciHub in exactly this format:\n",
     "\n",
     "> DHUS_USER=\"scihub_username\" <br>\n",
     "> DHUS_PASSWORD=\"scihub_password\"\n",
@@ -79,8 +79,7 @@
     "    os.environ[\"DHUS_PASSWORD\"]\n",
     "except:\n",
     "    logger.error(\"The environment variable 'DHUS_PASSWORD' is not set! Exiting...\")\n",
-    "    raise KeyError(\"The environment variable 'DHUS_PASSWORD' is not set!\")\n",
-    "\n"
+    "    raise KeyError(\"The environment variable 'DHUS_PASSWORD' is not set!\")"
    ]
   },
   {
@@ -98,8 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# establish connection to Copernicus Scihub\n",
-    "api = SentinelAPI(os.environ[\"DHUS_USER\"], os.environ[\"DHUS_PASSWORD\"])\n"
+    "api = SentinelAPI(os.environ[\"DHUS_USER\"], os.environ[\"DHUS_PASSWORD\"])"
    ]
   },
   {
@@ -109,12 +107,16 @@
    "source": [
     "#### Determine search criteria for Sentinel-1 imagery and perform search\n",
     "In a first step, we search for Sentinel-1 EW GRDM products that contain our region of interest (ROI). \n",
-    "The ROI for Fram Strait can be found in the 'rois' folder. We narrow the search down by the following criteria:\n",
-    "1) area (that is the ROI, given as GEOjson file)\n",
-    "2) time (start- and endtime)\n",
-    "3) platform and producttype: by default set to Sentinel-1 GRD\n",
+    "The ROI for Fram Strait can be found in the _'rois'_ folder. We narrow the search down by the following criteria:\n",
+    "1) area: the search polygon (ROI), saved as GEOjson file\n",
+    "2) time: start- and endtime\n",
+    "3) platform: Sentinel-1\n",
+    "4) product type: GRD\n",
+    "5) area relation: 'contain'. This means that only products where the search area is entirely WITHIN the footprint of the S1 will be returned.\n",
     "\n",
-    "To create your own custom ROI, nagivate to : https://geojson.io/ and draw a polygon of your choice. Then, save the result in GEOjson file format. Upload it to the notebook and give the path to the new file in the variable 'area' (see below)."
+    "To create your own custom ROI, nagivate to : https://geojson.io/ and draw a polygon of your choice. Then, save the result in GEOjson file format. Upload it to the notebook and give the path to the new file in the variable 'area' (see below).\n",
+    "\n",
+    "The query returns a dictionary _'s1_products'_, which contains all results that match our search criteria."
    ]
   },
   {
@@ -124,8 +126,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# search over Fram Strait for S1 imagery\n",
-    "# use custom geojson files containing search polygon\n",
+    "# DEFINE SEARCH PARAMETERS FOR S1\n",
+    "# use custom geojson file containing search polygon\n",
     "area = './rois/Fram_Strait.geojson'\n",
     "polygon_path = Path(area).expanduser().absolute()\n",
     "\n",
@@ -139,6 +141,8 @@
     "# area relation for S1, 'Contains' returns all hits where the ROI polygon is entirely WITHIN the footprint of the S1\n",
     "s1_area_relation = 'Contains'\n",
     "\n",
+    "# --------------------------------------------------------------------------------------------------------------------\n",
+    "# PERFORM SEARCH\n",
     "# query for S1 products that match our search criteria\n",
     "s1_products = api.query(\n",
     "                geojson_to_wkt(read_geojson(polygon_path)),\n",
@@ -147,6 +151,23 @@
     "                producttype=\"GRD\",\n",
     "                area_relation=s1_area_relation,\n",
     "                )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1392b186-f323-4f85-87f8-15f0f06d3171",
+   "metadata": {},
+   "source": [
+    "#### Search for overlapping optical data from Sentinel-2 (L1C)\n",
+    "In this step, we look for Sentinel-2 L1C products that overlap with the S1 scenes of the first search. We enter the following search criteria:\n",
+    "1) area: the same ROI as for the S1 search, because we are searching for spatial overlap!\n",
+    "2) time: images taken _x_ hours before or after the S1 image acquisition (set in 'max_n_hours' variable)\n",
+    "3) platform: Sentinel-2\n",
+    "4) processing level: Level-1C\n",
+    "5) area relation: 'intersect'. This will return all hits where the ROI intersects with the S2 footprint. We choose intersect here, because S2 images have a much smaller footprint than S1.\n",
+    "6) cloud cover: cloud cover range in percentage, given as tuple\n",
+    "\n",
+    "This output a dictionary _'s1_s2_overlap'_, which contains all S1 product names of the first search that have overlapping S2 images. The dictionary has as keys S1 product names, and as values the corresponding overlapping S2 product name(s).\n"
    ]
   },
   {
@@ -164,6 +185,20 @@
     }
    ],
    "source": [
+    "# DEFINE SEARCH PARAMETERS FOR S2\n",
+    "\n",
+    "# define maximum time difference between S1 and S2 image acquisitions\n",
+    "max_n_hours = 5\n",
+    "timedelta = datetime.timedelta(hours = max_n_hours) \n",
+    "\n",
+    "# define cloud cover percentage range\n",
+    "cloudcover = (0, 30)\n",
+    "\n",
+    "# area relation for S2, 'intersects' returns all hits where the ROI polygon INTERSECTS with the S1 footprint\n",
+    "s2_area_relation = 'Intersects'\n",
+    "\n",
+    "# -------------------------------------------------------------------------------------------------------------------\n",
+    "# PERFORM SEARCH\n",
     "# create empty dictionary that will contain S1 identifiers as keys, and the overlapping S2 identifier(s) as values\n",
     "s1_s2_overlap = {}\n",
     "\n",
@@ -174,16 +209,9 @@
     "    s1_identifier = s1_products[product]['identifier']\n",
     "    s1_timestamp = s1_products[product]['beginposition']\n",
     "\n",
-    "    # look for S2 imagery taken 2 hours before or after S1 acquisition\n",
-    "    timedelta = datetime.timedelta(hours = 5) \n",
+    "    # look for S2 imagery taken x hours before or after S1 acquisition\n",
     "    s2_starttime = s1_timestamp - timedelta\n",
     "    s2_endtime = s1_timestamp + timedelta\n",
-    " \n",
-    "    # define cloud cover percentage range\n",
-    "    cloudcover = (0, 30)\n",
-    "    \n",
-    "    # area relation for S2, 'intersects' returns all hits where the ROI polygon INTERSECTS with the S1 footprint\n",
-    "    s2_area_relation = 'Intersects'\n",
     "\n",
     "    # query for overlapping Sentinel-2 optical images\n",
     "    s2_products = api.query(\n",
@@ -205,7 +233,16 @@
     "            s2_id_list.append(s2_identifier)\n",
     "        s1_s2_overlap[s1_identifier] = s2_id_list\n",
     "            \n",
-    "print('Found', len(s1_s2_overlap), 'S1 scenes with overlapping S2 imagery.')\n"
+    "print('Found', len(s1_s2_overlap), 'S1 scenes with overlapping S2 imagery.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbb567ec-b629-49af-ba18-7501190b7332",
+   "metadata": {},
+   "source": [
+    "#### Save search results to text files \n",
+    "The search results from the _'s1_s2_overlap'_ dictionary are saved in text files, under the folder _'search_results_Fram_Strait'_. A seperate text file is created for each S1 product and the corresponding overlapping S2 products. The text files are named after the S1 product name, the content of the file is the overlapping S2 product names."
    ]
   },
   {
@@ -226,18 +263,8 @@
     "# save dictionary results to text files, these text files can then be used to download the S1 and S2 products on e.g. Creodias\n",
     "for key, value in s1_s2_overlap.items(): \n",
     "    with open(f\"./search_results_Fram_Strait/{key}.txt\", 'w') as f:\n",
-    "        f.write('\\n'.join(value))\n",
-    "        \n",
-    "print('Search results saved in \"search_results_Fram_Strait\" folder!')"
+    "        f.write('\\n'.join(value))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5db93bec-5f79-49c9-8b48-0db9a9030abf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
