--- a/S1_ice_water_classification/sentinel_search_Barents_Sea.ipynb
+++ b/S1_ice_water_classification/sentinel_search_Barents_Sea.ipynb
@@ -134,6 +134,8 @@
     }
    ],
    "source": [
+    "# DEFINE SEARCH PARAMETERS FOR S1\n",
+    "\n",
     "# use custom geojson files containing search polygon\n",
     "area = './rois/Barents_Sea.geojson'\n",
     "polygon_path = Path(area).expanduser().absolute()\n",
@@ -147,6 +149,9 @@
     "    \n",
     "starttime = parse(starttime, settings={\"DATE_ORDER\": \"YMD\"})\n",
     "endtime = parse(endtime, settings={\"DATE_ORDER\": \"YMD\"})\n",
+    "\n",
+    "# -------------------------------------------------------------------------------------------------------------------\n",
+    "# PERFORM SEARCH\n",
     "\n",
     "# query for S1 products that match our search criteria\n",
     "s1_products = api.query(\n",
@@ -196,6 +201,7 @@
     "\n",
     "# -------------------------------------------------------------------------------------------------------------------\n",
     "# PERFORM SEARCH\n",
+    "\n",
     "# create empty dictionary that will contain S1 identifiers as keys, and the overlapping S2 identifier(s) as values\n",
     "s1_s2_overlap = {}\n",
     "\n",
