--- a/S1_ice_water_classification/sentinel_search_Barents_Sea.ipynb
+++ b/S1_ice_water_classification/sentinel_search_Barents_Sea.ipynb
@@ -5,7 +5,7 @@
    "id": "49679b71-9db6-4cfc-8455-e2cb9972d316",
    "metadata": {},
    "source": [
-    "## Search for overlapping Sentinel-1 and Sentinel-2 in the Barents Sea"
+    "## Search for overlapping Sentinel-1 (S1) and Sentinel-2 (S2) in the Barents Sea"
    ]
   },
   {
