added compliance checker and better explenations

--- a/netCDF-creator/netCDF_creator.ipynb
+++ b/netCDF-creator/netCDF_creator.ipynb
@@ -647,6 +647,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Conclusion\n",
+    "\n",
+    "This notebook aims to gather information about CF conventions and other best practices when generating netCDF files. Many things can be improved regar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Some additional utility that could be useful\n",
     "-Find the name of a location given a coordinate\n",
     "\n",
