--- a/selected_distrubed_lakes_ecosystem_data/selected_distrubed_lakes_ecosystem_data.ipynb
+++ b/selected_distrubed_lakes_ecosystem_data/selected_distrubed_lakes_ecosystem_data.ipynb
@@ -311,10 +311,10 @@
     "    <em>*National Snow and Ice Data Center is informed</em><br>\n",
     "<br>\n",
     "- Sentinel-2 data:\n",
-    "    found on the CVL Metadata Search:\n",
-    "        - 'S2A_MSIL1C_20170801T071621_N0205_R006_T42WVD_20170801T071618'\n",
-    "        - 'S2A_MSIL1C_20170707T080611_N0205_R078_T42XWF_20170707T080606'\n",
-    "    ...but data from the tile requested is only available for 1 month, and not in the long term archive.\n",
+    "    found on the CVL Metadata Search: <br><br>\n",
+    "                'S2A_MSIL1C_20170801T071621_N0205_R006_T42WVD_20170801T071618'<br>\n",
+    "                'S2A_MSIL1C_20170707T080611_N0205_R078_T42XWF_20170707T080606'<br> <br>\n",
+    "    ...but data from the tile requested is only available for 1 month, and not in the long term archive.<br><br>\n",
     "    open issue about that: (last accessed 30.01.2023)<br>\n",
     "    https://github.com/CryosphereVirtualLab/public-notebooks/issues/18"
    ]
@@ -618,7 +618,7 @@
     "                                             'max':max_})\n",
     "\n",
     "                    outfile = '{}/era5_{}_ID{}.csv'.format(data_lake_path, grb.parameterName,np.array(Lake_ID)[0])\n",
-    "                    database.to_csv(outfile)  # where to save it, usually as a .pkl\n",
+    "                    database.to_csv(outfile)  # where to save it\n",
     "                    print(outfile)\n",
     "\n",
     "    print('done with era5 data cutting')\n",
@@ -784,7 +784,7 @@
     "        \n",
     "        plt.savefig(outfile)\n",
     "        plt.close('all')\n",
-    "        #print('safed_something')\n",
+    "        #print('saved_something')\n",
     "        #input('press any key to continue')\n",
     "\n",
     "print('done')"
@@ -1324,14 +1324,6 @@
     "\n",
     "<em>The processing was done in this notebook by combining and editing multi-source data sets within the CVL environment.</em>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "130218df",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
