--- a/Icecore_vs_Satellite/Icecore_vs_Satellite.ipynb
+++ b/Icecore_vs_Satellite/Icecore_vs_Satellite.ipynb
@@ -527,8 +527,8 @@
     "\n",
     "plt.plot(xi,yi, 'o', label = \"$Pi$\")\n",
     "plt.grid()\n",
-    "plt.xlabel(\"x\")\n",
-    "plt.ylabel(\"y\")\n",
+    "plt.xlabel(\"Record\")\n",
+    "plt.ylabel(\"Temperature (degree celcius)\")\n",
     "plt.legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
     "plt.show()"
    ]
