added introduction in readme

--- a/S1_ice_water_classification/ice_water_classification.ipynb
+++ b/S1_ice_water_classification/ice_water_classification.ipynb
@@ -9,13 +9,11 @@
    "source": [
     "### This notebook implements label propagation for the classification of 'ice' and 'water' from a Sentinel-1 EW GRDM image crop\n",
     "---\n",
-    "Classification is performed on crops of S1 EW GRDM images of 1500 x 1500 pixels. These pre-processed image crops are provided in the 'data' folder. The crops are calibrated and multilooked with a 3x3 window. The 'data' folder contains two subfolders containing crops and label masks for two different Sentinel-1 EW GRDM images. The subfolders are named after the S1 identifiers of these images. Inside each subfolder, you will find 4 files: 'Sigma0_HH_db', 'Sigma0_HV_db', 'label_mask', and 'labels.txt'. \n",
+    "Ice-water classification is performed on a subset of the example S1 image used throughout this notebook. The classification method implemented here is called Label Propagation, and is implemented using scikit-learn (https://scikit-learn.org/stable/modules/generated/sklearn.semi_supervised.LabelPropagation.html). Due to the high computational cost of Label Propagation, we cannot classify the whole Sentinel-1 scene at once, but only a small subset (1000 x 1000 pixels). Label Propagation is a semi-supervised, graph-based classification method. As it is semi-supervised, at least one labeled polygon per class is required as input. We manually label a few polygons in the SAR image, and save those as a label mask. The pre-processed image subsets and corresponding label mask are found in the _data_ folder.\n",
     "\n",
-    "'Sigma0_HH_db' and 'Sigma0_HV_db' are the calibrated and multilooked image crops, for both image channels. The file 'label_mask' is an image mask of the same size as the image channels, containing manually labeled polygons for the different sea ice types we want to classify in the image crops. At least one labeled polygon per ice type is required in the label mask, as Label Propagation is a semi-supervised learning algorithm.\n",
+    "The _data_ folder contains 4 files: _Sigma0_HH_db_, _Sigma0_HV_db_, _label_mask_, and _labels.txt_. _Sigma0_HH_db_ and _Sigma0_HV_db_ are the calibrated and multilooked image subsets, for both image channels. The file 'label_mask' is an image mask of the same size as the image subsets, which contains the manually labeled polygons for the different classes we want to classify in the image. At least one labeled polygon per class is required in the label mask.\n",
     "\n",
-    "The data of the image crops ('Sigma0_HH_db' and 'Sigma0_HV_db') need to be normalized before entering them in the label propagation algorithm. Different normalization options are implemented here, and their respective results on the image crops are visualized. \n",
-    "\n",
-    "Label Propagation is implemented using scikit-learn (https://scikit-learn.org/stable/modules/generated/sklearn.semi_supervised.LabelPropagation.html)\n",
+    "The image subsets ('Sigma0_HH_db' and 'Sigma0_HV_db') need to be normalized before entering them in the label propagation algorithm. Different normalization options are implemented here, and their respective results on the image crops are visualized. \n",
     "\n",
     "---"
    ]
@@ -54,13 +52,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "179309c3-f631-49a0-83c1-00664159414d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gdal' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m data_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./data/S1A_EW_GRDM_1SDH_20200330T043712_20200330T043819_031900_03AEB2_CC99/\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#read in bands with gdal\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m sigma0_hh \u001b[38;5;241m=\u001b[39m \u001b[43mgdal\u001b[49m\u001b[38;5;241m.\u001b[39mOpen(data_dir \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSigma0_HH_db.img\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mReadAsArray()\n\u001b[1;32m      6\u001b[0m sigma0_hv \u001b[38;5;241m=\u001b[39m gdal\u001b[38;5;241m.\u001b[39mOpen(data_dir \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSigma0_HV_db.img\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mReadAsArray()\n\u001b[1;32m      7\u001b[0m label_mask \u001b[38;5;241m=\u001b[39m gdal\u001b[38;5;241m.\u001b[39mOpen(data_dir \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel_mask.img\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mReadAsArray()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gdal' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# TO DO: stich together the part of 'load_plot_S1_scene' with this script!!\n",
-    "\n",
     "# define data directory\n",
     "data_dir = './data/S1A_EW_GRDM_1SDH_20200330T043712_20200330T043819_031900_03AEB2_CC99/'\n",
     "\n",
@@ -385,7 +393,8 @@
    "id": "0427d94e-402b-463a-88df-62521b120305",
    "metadata": {},
    "source": [
-    "### Implementation of Label Propagation for the classification of sea ice types"
+    "### Implementation of Label Propagation for the classification of sea ice types\n",
+    "**Note**: this step takes long to run!"
    ]
   },
   {
@@ -502,9 +511,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "62a68d1f-e7df-432f-9905-ce16c04b8933",
+   "metadata": {},
+   "source": [
+    "No ground thruth is available for this SAR image, so we judge the classification result by visually comparing the input images with the classification map. In this case, the classification result is satisfying, as all areas we expected to be ice, are classified correctly as 'ice'. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "058a3e51-06ec-4d15-82c5-9e2948a80571",
+   "id": "868791af-0d5a-4e2a-a969-ff7a4b6b69bb",
    "metadata": {},
    "outputs": [],
    "source": []
