--- a/selected_distrubed_lakes_ecosystem_data/selected_distrubed_lakes_ecosystem_data.ipynb
+++ b/selected_distrubed_lakes_ecosystem_data/selected_distrubed_lakes_ecosystem_data.ipynb
@@ -760,7 +760,7 @@
     "        Lake['div_index'] = Div_index\n",
     "        # print('diversity index:', Div_index)\n",
     "        \n",
-    "        #safe .shp file\n",
+    "        #save .shp file\n",
     "        outfile = data_lake_path + '/shape_ID{}.shp'.format(Lake_ID[0])\n",
     "        Lake.to_file(outfile)  \n",
     "        \n",
