deleted last cell

--- a/S1_ice_water_classification/load_and_calibrate_S1_scene.ipynb
+++ b/S1_ice_water_classification/load_and_calibrate_S1_scene.ipynb
@@ -739,44 +739,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2e2a50d-f3e3-46bd-8414-946a9b33e76d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create a figure handle\n",
-    "fig = plt.figure(figsize=(12,12))\n",
-    "\n",
-    "# create an axes handle with the previously specified projection\n",
-    "ax = plt.axes(projection=target_projection)\n",
-    "\n",
-    "# customise map and add features\n",
-    "ax.set_extent([lon_min_geo - 4,lon_max_geo + 4, lat_min_geo - 1, lat_max_geo + 1])\n",
-    "plt.pcolormesh(lon, lat, image, transform=orig_projection, cmap='gray', vmin=vmin, vmax=vmax)\n",
-    "\n",
-    "ax.gridlines(color='white',draw_labels=True, y_inline=False)\n",
-    "ax.coastlines(color='yellow')\n",
-    "ax.add_feature(cartopy.feature.LAND)\n",
-    "ax.add_feature(cartopy.feature.OCEAN)\n",
-    "ax.set_title('Sigma Nought backscatter values of HH channel')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "825c5c92-bb09-4f94-9efa-8c3d9c5a667e",
    "metadata": {},
    "source": [
-    "CROP IMAGE DATA (x from 8400:8900 and y from 3600:4600 )"
+    "TO DO: crop image data (x from 8400:8900 and y from 3600:4600 ) and paste cells from ice_water_classification here"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3ee462b7-f828-4326-aee7-67d5ca14d723",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dc224eb-0f6c-46ed-b0be-77b0052e6fb2",
    "metadata": {},
-   "source": [
-    "PASTE CELLS FROM ICE_WATER_CLASSIFICATION HERE"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
