--- a/S1_ice_water_classification/ice_water_classification.ipynb
+++ b/S1_ice_water_classification/ice_water_classification.ipynb
@@ -7,7 +7,8 @@
     "tags": []
    },
    "source": [
-    "### This notebook implements label propagation for the classification of 'ice' and 'water' from a Sentinel-1 EW GRDM image crop\n",
+    "### Ice-Water Classification: label propagation for the classification of 'ice' and 'water' from a Sentinel-1 EW GRDM image subset\n",
+    "\n",
     "---\n",
     "Ice-water classification is performed on a subset of the example S1 image used throughout this notebook. The classification method implemented here is called Label Propagation, and is implemented using scikit-learn (https://scikit-learn.org/stable/modules/generated/sklearn.semi_supervised.LabelPropagation.html). Due to the high computational cost of Label Propagation, we cannot classify the whole Sentinel-1 scene at once, but only a small subset (1000 x 1000 pixels). Label Propagation is a semi-supervised, graph-based classification method. As it is semi-supervised, at least one labeled polygon per class is required as input. We manually label a few polygons in the SAR image, and save those as a label mask. The pre-processed image subsets and corresponding label mask are found in the _data_ folder.\n",
     "\n",
