--- a/S1_ice_water_classification/load_and_calibrate_S1_scene.ipynb
+++ b/S1_ice_water_classification/load_and_calibrate_S1_scene.ipynb
@@ -5,11 +5,12 @@
    "id": "82cb7aa2-88ab-4588-b73d-c2c09c2773ef",
    "metadata": {},
    "source": [
-    "### This notebook opens a Sentinel-1 EW GRDM image and calibrates it, in the following 4 steps:\n",
-    "#### 1) open a Sentinel-1 EW GRDM data product from CVL with the xarray package (lazy loading)\n",
-    "#### 2) visualize the uncalibrated image data (amplitude values) using Cartopy\n",
-    "#### 2) calibrate both image channels (HH and HV polarization) using the Look-Up Table for Sigma Nought\n",
-    "#### 3) visualize the calbrated image using Cartopy"
+    "### Load and calibrate S1 scene\n",
+    "This notebook opens a Sentinel-1 EW GRDM image and calibrates it, in the following 4 steps:\n",
+    "1) open a Sentinel-1 EW GRDM data product from CVL with the xarray package (lazy loading)\n",
+    "2) visualize the uncalibrated image data (amplitude values) using Cartopy\n",
+    "2) calibrate both image channels (HH and HV polarization) using the Look-Up Table for Sigma Nought\n",
+    "3) visualize the calbrated image using Cartopy"
    ]
   },
   {
